--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <p class="mb-0"><strong>Email</strong></p>
                     <p><a href="mailto: phan98dong@gmail.com">phan98dong@gmail.com</a></p>
                     <p class="mb-0"><strong>Facebook</strong></p>
-                    <p><a href="https://www.facebook.com/imdong2k3/">Phan Đông</a></p>
+                    <p><a href="https://www.facebook.com/phandong.info03/">Phan Đông</a></p>
                   </div>
                 </div>
               </div>
